[tool.poetry]
name = "binance-futures-trader"
version = "0.1.0"
description = ""
authors = ["Sedat E. <97784790+unisebcin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "binance_futures_trader"}]

[tool.poetry.dependencies]
python = "^3.10"
binance-futures-connector = "^3.3.0"
pandas = "^1.5.3"
requests = "^2.28.2"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
